--- a/res/layout/item_contact_grid.xml
+++ b/res/layout/item_contact_grid.xml
@@ -124,10 +124,10 @@
 		            android:layout_gravity="center_vertical"/>
                 
                 <ImageButton
-		            android:id="@+id/contact_grid_option_send1"
+		            android:id="@+id/contact_grid_option_share1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:src="@drawable/contact_list_option_send"
+		            android:src="@drawable/ic_share"
 		            android:paddingLeft="30dp"
 		            android:paddingTop="10dp"
 		            android:background="@null"
@@ -260,10 +260,10 @@
 		            android:layout_gravity="center_vertical"/>
                 
                 <ImageButton
-		            android:id="@+id/contact_grid_option_send2"
+		            android:id="@+id/contact_grid_option_share2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:src="@drawable/contact_list_option_send"
+		            android:src="@drawable/ic_share"
 		            android:paddingLeft="30dp"
 		            android:paddingTop="10dp"
 		            android:background="@null"
