--- a/res/layout/fragment_filebrowserlist.xml
+++ b/res/layout/fragment_filebrowserlist.xml
@@ -101,4 +101,17 @@
         
 	</RelativeLayout>
 	
+      <Button
+       	android:id="@+id/file_list_browser_camera_upload_on_off"
+       	android:layout_gravity="center"
+       	android:layout_height="48dp"
+       	android:layout_width="fill_parent"
+       	android:layout_alignParentBottom="true"
+       	android:background="@drawable/btn_default_holo_light_without_corners"
+       	android:textColor="@color/button_text"
+       	android:text="@string/settings_camera_upload_on"
+       	android:visibility="gone"
+       	android:layout_below="@id/buttons_layout">
+    </Button>
+
 </RelativeLayout>
