--- a/res/layout/activity_manager.xml
+++ b/res/layout/activity_manager.xml
@@ -14,7 +14,7 @@
 <!-- THE CONTACTS TABS -->
 
 	<TabHost
-        android:id="@android:id/tabhost"
+        android:id="@+id/tabhost_contacts"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -44,6 +44,40 @@
 
         </LinearLayout>
     </TabHost>
+    
+	<TabHost
+        android:id="@+id/tabhost_shares"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+           <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+       	   </TabWidget>
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="0"/>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/shares_tabs_pager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+    </TabHost>
+    
+	
 
 
 
