--- a/res/layout/shared_item_list.xml
+++ b/res/layout/shared_item_list.xml
@@ -46,6 +46,18 @@
         android:ellipsize="end"
         android:maxLines="1"/>
     
+    <ImageButton 
+        android:id="@+id/file_list_three_dots_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/action_selector_ic"
+		android:background="@null" 
+        android:layout_alignTop="@id/file_list_filename_share"
+        android:layout_alignParentRight="true"
+		android:paddingTop="12dp"
+        android:paddingRight="15dp" />
+    
+    
     <ProgressBar
 	    android:id="@+id/transfers_list_bar_share"
 		android:layout_width="fill_parent"
@@ -60,76 +72,109 @@
     
     </RelativeLayout>
     
-    
-    <!-- Item for CONTACTS -->
     <RelativeLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:descendantFocusability="blocksDescendants"
-	    android:id="@+id/contact_share_item_layout"
-	    android:background="@color/photo_sync_month_layout"
-	    android:layout_below="@+id/file_share_item_layout"	    
-	    android:longClickable="false"
-		android:clickable="false">
-	    
+        android:id="@+id/share_list_options"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/file_list_thumbnail"
+        android:padding="0dp"
+        android:background="#2a2a2a">
         
-        <RelativeLayout
-			android:id="@+id/contact_list_relative_layout_avatar_share"
-			android:layout_width="54dp"
-			android:layout_height="54dp"
-			android:layout_marginLeft="5dp" 
-			android:paddingTop="3dp" >
-	         
-		    <com.mega.components.RoundedImageView 
-		         android:id="@+id/contact_list_thumbnail_share"
-		         android:layout_width="54dp"
-		         android:layout_height="54dp" 
-		         android:scaleType="fitCenter"         
-		         rounded:corner_radius="27dp" 
-		         rounded:border_width="2dp"
-		         rounded:border_color="@color/border_file_properties"/>
-		    
-		    <TextView
-		        android:id="@+id/contact_list_initial_letter_share"
-		        android:layout_width="fill_parent"
-		        android:layout_height="fill_parent" 
-		        android:layout_centerInParent="true"
-			    android:gravity="center_horizontal|center_vertical" />
-		    
-	    </RelativeLayout>
-    
-<!-- 	    <com.mega.components.RoundedImageView 
-	         android:id="@+id/contact_list_thumbnail_share"
-	         android:layout_width="54dp"
-	         android:layout_height="54dp"
-	         android:layout_marginLeft="5dp" 
-	         android:scaleType="fitCenter"
-	         android:paddingTop="3dp"
-	         android:paddingBottom="3dp"
-	         rounded:corner_radius="27dp" 
-	         rounded:border_width="2dp"
-	         rounded:border_color="@color/border_file_properties"/>
- -->	    
-	    <TextView
-	        android:id="@+id/shared_contact_name"
-	        android:layout_width="wrap_content"
-	        android:layout_height="30dp"
-	        android:layout_toRightOf="@id/contact_list_relative_layout_avatar_share"
-	        android:paddingTop="10dp"
-	        android:textColor="@color/white"/>  
-<!--      
-	    <TextView
-	        android:id="@+id/shared_contact_content"
-	        android:layout_width="wrap_content"
-	        android:layout_height="50dp"
-	        android:layout_toRightOf="@id/contact_list_thumbnail_share"
-	        android:layout_below="@id/shared_contact_name"
-	        android:paddingLeft="5dp"
-	        android:paddingBottom="7dp"
-	        android:textColor="@color/white"/>
-    -->	
-	</RelativeLayout>
-    
-    
+        <TableLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            
+            <TableRow>
+<!-- 	            <ImageButton
+		            android:id="@+id/file_list_option_open"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_action_collections_collection"
+		            android:paddingLeft="30dp"
+		            android:paddingTop="10dp"
+		            android:background="@null" 
+		            android:layout_gravity="center_vertical"/>
+-->	        
+				<ImageView
+		            android:id="@+id/share_list_option_download"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_download"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 
+		        <ImageView
+		            android:id="@+id/share_list_option_properties"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_properties"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
+	            
+		        
+		        <ImageView
+		            android:id="@+id/share_list_option_share"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_share"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
+		        
+		       
+
+		        <ImageView
+		            android:id="@+id/share_list_option_delete"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_delete"
+		            android:layout_gravity="center_vertical" 
+		            style="@style/dialogActionButton" />
+		        
+	<!--	         <ImageView 
+		            android:id="@+id/file_list_option_overflow"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_action_core_overflow"
+		            android:layout_gravity="center_vertical" 
+		            style="@style/dialogActionButton"/>
+		         	         
+		         
+		          <ImageView
+		            android:id="@+id/file_list_option_rename"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_rename"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
+		        
+ 		         <ImageView
+		            android:id="@+id/file_list_option_public_link"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/link"
+		            android:layout_gravity="center_vertical" 
+		            style="@style/dialogActionButton" />
+
+				
+
+				<ImageView
+		            android:id="@+id/file_list_option_copy"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_menu_copy"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
+		        
+		        <ImageView
+		            android:id="@+id/file_list_option_move"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_menu_move"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" /> -->
+		         
+	        </TableRow>        
+        </TableLayout>
+    </RelativeLayout>    
 </RelativeLayout>
+
