--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -34,7 +34,7 @@
     <color name="contact_properties_info_data">#999999</color>
     <color name="contact_list_second_row">#848484</color>
     <color name="photo_sync_month_layout">#333333</color>
-    
+    <color name="switch_selector_layout">#1a1a1a</color>
     <color name="color_default_avatar_mega">#d90007</color>
     <color name="color_default_avatar_phone">#777777</color>
     
