--- a/res/layout/shared_item_grid.xml
+++ b/res/layout/shared_item_grid.xml
@@ -32,7 +32,7 @@
 	        android:scaleType="fitCenter"
 	        android:layout_marginLeft="6dp"
 	        android:layout_centerHorizontal="true"
-	        android:layout_below="@id/file_grid_thumbnail1"
+	        android:layout_below="@id/share_grid_thumbnail1"
 	 		 />
         
         <TextView
@@ -52,7 +52,7 @@
 	        android:paddingLeft="6dp"
 	        android:paddingBottom="7dp"
 	        android:textColor="@color/file_list_second_row"
-	        android:layout_below="@id/file_grid_filename1"
+	        android:layout_below="@id/share_grid_filename1"
 	        android:textSize="12sp" />
         
   <!--       <ImageButton 
@@ -77,8 +77,7 @@
 		android:paddingBottom="10dp"
 		style="@style/MEGAProgressBarTransfers"  
 		android:layout_margin="5dip" 
-        android:layout_toLeftOf="@id/file_grid_three_dots1"
-        android:layout_below="@id/file_grid_filename1" /> 
+        android:layout_below="@id/share_grid_filename1" /> 
          <!--
         <ImageView
 	        android:id="@+id/file_grid_arrow_selection1"
@@ -97,7 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/share_grid_item_layout2"
-        android:layout_toRightOf="@id/file_grid_item_layout2"
+        android:layout_toRightOf="@id/share_grid_item_layout2"
         android:background="@drawable/background_item_grid"
         android:layout_alignParentRight="true">
         
@@ -117,7 +116,7 @@
 	        android:scaleType="fitCenter"
 	        android:layout_marginLeft="6dp"
 	        android:layout_centerHorizontal="true"
-	        android:layout_below="@id/file_grid_thumbnail2"/>
+	        android:layout_below="@id/share_grid_thumbnail2"/>
         
         <TextView
 	        android:id="@+id/share_grid_filename2"
@@ -134,7 +133,7 @@
 	        android:paddingLeft="6dp"
 	        android:paddingBottom="7dp"
 	        android:textColor="@color/file_list_second_row"
-	        android:layout_below="@id/file_grid_filename2" 
+	        android:layout_below="@id/share_grid_filename2" 
 	        android:textSize="12sp" />
         
   <!--        <ImageButton 
@@ -160,8 +159,7 @@
 		android:paddingRight="10dp"
 		android:paddingBottom="10dp"
 		android:layout_margin="5dip"
-        android:layout_toLeftOf="@id/file_grid_three_dots2"
-        android:layout_below="@id/file_grid_filename2" />    
+        android:layout_below="@id/share_grid_filename2" />    
    <!--
         <ImageView
 	        android:id="@+id/file_grid_arrow_selection2"
