--- a/res/layout/item_photo_sync_grid.xml
+++ b/res/layout/item_photo_sync_grid.xml
@@ -1,63 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/file_grid_item_complete_layout"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/grid_background">
-    
-    <RelativeLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/photo_sync_grid_item_layout"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:descendantFocusability="blocksDescendants" >
-        
-        <ImageButton
-	        android:id="@+id/photo_sync_grid_thumbnail1"
-	        android:layout_width="110dp"
-	        android:layout_height="110dp"
-	        android:scaleType="fitCenter"
-	        android:background="@null" 
-	        android:layout_marginRight="5dp"
-	        android:layout_marginLeft="5dp"
-	        android:layout_alignParentLeft="true"/>
-        
-        <ImageButton
-	        android:id="@+id/photo_sync_grid_thumbnail2"
-	        android:layout_width="110dp"
-	        android:layout_height="110dp"
-	        android:scaleType="fitCenter"
-	        android:background="@null" 
-	        android:layout_marginRight="5dp"
-	        android:layout_marginLeft="5dp"
-	        android:layout_centerHorizontal="true"/>
-        
-        <ImageButton
-	        android:id="@+id/photo_sync_grid_thumbnail3"
-	        android:layout_width="110dp"
-	        android:layout_height="110dp"
-	        android:scaleType="fitCenter"
-	        android:background="@null"
-	        android:layout_marginRight="5dp"
-	        android:layout_marginLeft="5dp"
-	        android:layout_alignParentRight="true"/>
-    </RelativeLayout>
-    
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cell_photosync_layout"
+   	android:layout_width="fill_parent"
+   	android:layout_height="wrap_content"
+   	android:layout_gravity="center|fill_horizontal"
+   	android:orientation="horizontal"
+  	android:background="@color/grid_background">
+  	
     <RelativeLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:descendantFocusability="blocksDescendants"
-	    android:id="@+id/photo_sync_grid_month_layout" 
+	    android:id="@+id/cell_photosync_grid_month_layout" 
 	    android:background="@color/photo_sync_month_layout"
 	    android:layout_marginLeft="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="0dp" >
 	    
     	<TextView
-	        android:id="@+id/photo_sync_grid_month_name"
+	        android:id="@+id/cell_photosync_grid_month_name"
 	        android:layout_width="225dp"
 	        android:layout_height="30dp"
 	        android:layout_marginLeft="10dp"
@@ -67,6 +27,5 @@
 	        android:textColor="@color/white"
 	        android:textSize="18sp"/>
     
-	</RelativeLayout>	
-        
-</RelativeLayout>
+	</RelativeLayout>
+</LinearLayout>
