--- a/res/layout/fragment_my_account.xml
+++ b/res/layout/fragment_my_account.xml
@@ -39,8 +39,8 @@
     
     <com.mega.components.RoundedImageView
         android:id="@+id/my_avatar_image"
-        android:layout_width="270dp"
-        android:layout_height="270dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:paddingBottom="10dp"
         android:paddingLeft="30dp"
@@ -48,7 +48,7 @@
         android:paddingTop="10dp"
         rounded:border_color="@color/border_file_properties"
         rounded:border_width="2dp"
-        rounded:corner_radius="90dp" />
+        rounded:corner_radius="100dp" />
 
     <TableLayout
         android:id="@+id/my_content_table"
@@ -64,7 +64,7 @@
               android:id="@+id/my_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:paddingTop="10dp"
+              android:paddingTop="0dp"
               android:textSize="20sp"
               android:gravity="center"
               android:textColor="@color/white" 
@@ -95,23 +95,23 @@
 
 		    <TextView
 		        android:id="@+id/used_space_text_my_account"
-	            android:layout_width="fill_parent"
+	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:text="@string/used_space_text" 
 	            android:textColor="@color/navigation_drawer_text"
 	            android:paddingTop="10dp"
-	            android:paddingLeft="10dp"
+	            android:layout_marginLeft="10dp"
 	            android:textSize="18sp"
 	            android:layout_gravity="left|bottom" />
 		    
 		    <TextView
 		        android:id="@+id/used_space_my_account"
-	            android:layout_width="fill_parent"
+	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:text="@string/used_space" 
 	            android:textColor="@color/navigation_drawer_text"
 	            android:paddingTop="10dp"
-	            android:paddingRight="10dp"
+	            android:paddingRight="20dp"
 	            android:layout_gravity="right|bottom" />
             
         </TableRow>
@@ -120,6 +120,7 @@
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_span="2">
 	            
                 <ProgressBar
@@ -127,22 +128,24 @@
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content" 
 					style="@style/MEGAProgressBar"  
-					android:layout_margin="5dip" />
+					android:paddingLeft="5dip"
+					android:paddingRight="5dip" />
             </RelativeLayout>
         </TableRow>
         
          <TableRow >
              
-              <TextView
+            <TextView
              android:id="@+id/my_account_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/my_account_title"
              android:textColor="@color/file_properties_info_menu"
-			 android:layout_gravity="center_vertical|left"
+			 android:layout_gravity="center_vertical|right"
 			 android:textStyle="bold"
 			 android:paddingLeft="30dp"
-			 android:paddingTop="7dp" />   
+			 android:paddingTop="10dp"
+			 android:paddingBottom="10dp" />   
              
         	<TextView
              android:id="@+id/my_account_type_account"
@@ -151,11 +154,74 @@
              android:textColor="@color/white"
 			 android:layout_gravity="center_vertical|left" 
 			 android:paddingLeft="4dp"
-			 android:paddingTop="7dp"/>         
-                         
-             
+			 android:paddingTop="10dp"
+			 android:paddingBottom="10dp" />    
          </TableRow>
-		
+         
+         <TableRow>
+             
+              <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_span="2">
+                <Button
+		            android:id="@+id/btn_upgrade"
+		            android:layout_width="200dp"
+		       		android:layout_height="48dp"
+		       		android:layout_marginTop="10dp"
+		       		android:textStyle="bold"
+		       		android:layout_gravity="center_horizontal"
+		            android:text="@string/my_account_upgrade_pro" 
+		            style="@style/button_MEGA_inverse"/>
+ 			</RelativeLayout>
+        </TableRow>
+            
+        <TableRow >             
+            <TextView
+             android:id="@+id/my_last_session_title"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="@string/my_account_last_session"
+             android:textColor="@color/file_properties_info_menu"
+			 android:layout_gravity="center_vertical|right"
+			 android:textStyle="bold"
+			 android:paddingLeft="30dp"
+			 android:paddingTop="10dp" />   
+             
+        	<TextView
+             android:id="@+id/my_last_session"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:textColor="@color/white"
+			 android:layout_gravity="center_vertical|left" 
+			 android:paddingLeft="4dp"
+			 android:paddingTop="7dp"/>       
+         </TableRow>
+         
+          <TableRow >
+            
+             <TextView
+	            android:id="@+id/my_connections_title"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/my_account_connections"
+	            android:textColor="@color/file_properties_info_menu"
+			 	android:layout_gravity="center_vertical|left"
+			 	android:textStyle="bold"
+			 	android:paddingLeft="30dp"
+			 	android:paddingTop="7dp" />   
+            
+	       	<TextView
+	            android:id="@+id/my_connections"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textColor="@color/white"
+				android:layout_gravity="center_vertical|left" 
+				android:paddingLeft="4dp"
+				android:paddingTop="7dp"/>      
+       </TableRow>
+         
 	</TableLayout>
     
      
@@ -163,7 +229,7 @@
     <Button
         android:id="@+id/my_account_logout"
 		android:layout_height="48dp"
-		 android:layout_width="fill_parent"
+		android:layout_width="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
         android:background="@drawable/btn_default_holo_light_without_corners"
